# Hardware

./: .gitignore  README.md  README_SUMMARY.md  [NNMClub.to]_Radio ¹8 (avgust 2023).torrent  vcpkg-configuration.json
AVR/: README.md
AVR/Butterfly/: readme.md  wiring.md
AVR/STK500/: readme.md  wiring.md
Arduino/: README.md
Arduino/CJMCU-Beetle USB ATMEGA32U4 Mini Development Board For Arduino Leonardo/: readme.md  wiring.md
Arduino/Digistump ATTINY85/: readme.md  wiring.md
Arduino/PRO Mini/: readme.md  wiring.md  www.b4x.com
Arduino/TestArduinoISP/: platformio.ini  readme.md  wiring.md
Arduino/YL-34/: readme.md  wiring.md
Arduino/frankenstein/: readme.md  wiring.md
Arduino/hw-260 development board/: readme.md  wiring.md
Arduino/leonardo/: readme.md  wiring.md
Arduino/nano v3/: readme.md  wiring.md
CH582F/: readme.md  wiring.md
COMPONENTS/: README.md
COMPONENTS/Liniar Sensor/: readme.md  wiring.md
COMPONENTS/YF923/: readme.md  wiring.md
Cypress/: README.md  wiring.md
Cypress/CY8CKIT-059/: readme.md  wiring.md
Displays/: README.md  wiring.md
Displays/1,7_SPI_128x160_OLED_ST7735/: readme.md  wiring.md
Displays/HD44780/: IMG_3578.HEIC  readme.md  wiring.md
Displays/HITACHI LM032XMBL/: readme.md  wiring.md
Displays/Money_Detector_Display_TM1621/: Money_Detector_Display_TM1621.ino  readme.md  wiring.md
Displays/Nokia LCD5110 (PCD8544)/: readme.md  wiring.md
Displays/SSD1306/: embeetle_logo_128x64.h  readme.md  wiring.md
Displays/TM1637/: readme.md  wiring.md
Displays/UTFT/: platformio.ini  readme.md
Displays/gm12864/: 12864_3V3_ESP32_CODE.ino  2.2-inch-i2c-iic-gm12864-v2.0-mavi-glcd-modul-st7567s-dc-3.3v-5v-128x64-pixel-grafik-lcd-kcm61127770-1-6a8256100a054e1d89dc38008377a4e7.avif  readme.md  wiring.md
Displays/st7789/: readme.md  wiring.md
EINK/: README.md  wiring.md
EINK/lilygo T5-4.7 inch/: readme.md  wiring.md
ESP/: readme.md  wiring.md
ESP/Commodore-board/: readme.md  wiring.md
ESP/ESP-01/: readme.md  wiring.md
ESP/ESP-03/: readme.md  wiring.md
ESP/ESP-32S NodeMCU/: readme.md  wiring.md
ESP/ESP32-CAM/: readme.md  readme.txt  wiring.md
ESP/ESP32-c3-with-display/: readme.md  wiring.md
ESP/ESP32TTGO-OLED-18650/: readme.md  wiring.md
ESP/Frankenstein/: readme.md  wiring.md
ESP/HELTEC/: readme.md  wiring.md
ESP/Lolin c3 Pico/: readme.md  wiring.md
ESP/Nodemcu WIFI ESP8266 Lolin32 0.91'' OLED Display Screen Board CP2104 for Arduino/: readme.md  wiring.md
ESP/T-Display-S3/: readme.md  wiring.md
ESP/TS V1.0 Esp32 1.44 TFT Display MicroSD Card Slot Speakers WIFI Bluetooth Module/: readme.md  wiring.md
ESP/TTGO/: readme.md  wiring.md
ESP/TTGO-T5-ePaper/: readme.md  wiring.md
ESP/Wemos-32-With-OLED/: readme.md  wiring.md
ESP/lolin c3 mini pro/: readme.md  wiring.md
ESP/muselab/: S22b1382851dd447fb99d6769ea8fa4edC.avif  S8bc9a5534f704ff0b51a418b6b320441o.avif  Sfbee5e59702d4e92b3ee03f7a2549696B.avif  readme.md  wiring.md
GD32/GD32E232K/: GD32F20x_AddOn_V2.2.3.rar
Geehy/: README.md  wiring.md
Geehy/APM32F072VB/: Geehy.APM32F0xx_DFP.1.0.9.pack  readme.md  wiring.md
GigaDevice/: readme.md
GigaDevice/GD32E232K/: device address.md
GigaDevice/GD32E232K/GD32E23x_Demo_Suites_V1.1.1/GD32E230C_EVAL_Demo_Suites/Projects/01_GPIO_Running_LED/MDK-ARM/tmp/Project+GD32E230CEVAL/: CMakeLists.txt  groups.cmake  toolchain.cmake
GigaDevice/GD32E232K/GD32E23x_Demo_Suites_V1.1.1/GD32E230C_EVAL_Demo_Suites/Projects/01_GPIO_Running_LED/MDK-ARM/tmp/Project+GD32E230CEVAL/tmp/: Project+GD32E230CEVAL-cfgcmd.txt  Project+GD32E230CEVAL-mkdirs.cmake
GigaDevice/GD32VF103/: .gitignore  (+3 more)
IC/: README.md  wiring.md
MODULES/: README.md
Modules/: wiring.md
NORDIC/: readme.md  wiring.md
NXP/: README.md  wiring.md
PROJECTS/: README.md
Power Supply D-30A/: README.md  wiring.md
Raspberry/: README.md  wiring.md
SHIELDS/: README.md  wiring.md
STM32/: README.md  wiring.md
STM8/: readme.md  wiring.md
Soldering KIT/: DIY Kit RGB LED Flashing Controller SMD Component Welding Practice Electronic Suite.html  README.md
TI/: readme.md
WCH/: README.md  Sketch SI5351_VFO_RF_GEN_OLED_JCR_V2.txt  wiring.md
(+7354 files in other folders)
